[package]
name = "Socket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde_json = "1.0.140"
socketioxide = "0.17.1"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

